<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context=".activities.student.AddCourse">

    <ProgressBar
        android:id="@+id/add_course_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/add_course_form">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilCourseName"
            style="@style/TextInputLayoutStyle"
            android:layout_width="@dimen/til_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/til_top"
            app:boxBackgroundMode="outline"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCourseName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:hint="@string/hint_course_name"
                android:drawableStart="@drawable/ic_book"
                android:drawablePadding="@dimen/drawable_padding"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilCourseCode"
            style="@style/TextInputLayoutStyle"
            android:layout_width="@dimen/til_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/til_space"
            app:boxBackgroundMode="outline"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ilCourseName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCourseCode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:hint="@string/hint_course_code"
                android:drawableStart="@drawable/ic_book"
                android:drawablePadding="@dimen/drawable_padding"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilCourseDescription"
            style="@style/TextInputLayoutStyle"
            android:layout_width="@dimen/til_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/til_space"
            app:boxBackgroundMode="outline"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ilCourseCode">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCourseDescription"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:hint="@string/hint_course_description"
                android:drawableStart="@drawable/ic_book"
                android:drawablePadding="@dimen/drawable_padding"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_top"
            android:text="@string/button_add_course"
            android:onClick="btnAddCourse_onClick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ilCourseDescription" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/linear_layout_top"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAddCourse">

            <TextView
                android:id="@+id/tvListCourses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_list_courses_margins"
                android:gravity="center"
                android:text="@string/text_list_courses"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvListCourses"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>